# DevCompanion2.0

./: README.md  build.gradle  build_and_push.sh  filelist.txt  filelist_with_sizes.txt  filetree.txt  gradlew  gradlew.bat  local.properties  settings.gradle  trigger.txt
.github/workflows/: android-build.yml  android.yml  build_ethereon.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: roadmap.json  todo.json
app/src/main/assets/porcupine/: Hey-Nova_en_android_v3_0_0.ppn
app/src/main/assets/scripts/: compile.sh
app/src/main/cpp/: CMakeLists.txt  llama.cpp  llama.h  llama_jni.cpp
app/src/main/java/com/devcompanion/: AIManager.java  ChatFragment.java  ChatMessage.java  MainActivity.java  ModelSelector.java  MyApp.java
app/src/main/res/drawable/: bg_bot_message.xml  bg_user_message.xml  ic_mic.xml  ic_send.xml  rounded_edit_text.xml
app/src/main/res/layout/: activity_main.xml  activity_project_detail.xml  dialog_model_picker.xml  fragment_app_creator.xml  fragment_build_progress.xml  fragment_chat.xml  fragment_dashboard.xml  fragment_debug.xml  fragment_expansions.xml  fragment_file_upload.xml  fragment_log_viewer.xml  fragment_model_selector.xml  fragment_roadmap.xml  fragment_settings.xml  item_chat_ai.xml  item_chat_bot.xml  item_chat_message.xml  item_chat_user.xml  item_roadmap.xml  view_floating_orb.xml
app/src/main/res/menu/: navigation.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values/themes/: themes.xml
(+85 files in other folders)
